# moonrepo-kickstart

./: .env.example  .gitignore  .prototools  AGENTS.md  PLAN.md  README.md  biome.json  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
.husky/: pre-commit
.moon/: toolchain.yml  workspace.yml
.zed/: settings.json
apps/api/: moon.yml  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 2ec4f07d95bc_add_oauth_fields_to_users.py  7124850135be_create_users_table.py  78a51665edf8_init_sqlmodel_migrations.py  8b965a9fabc3_add_user_role_field.py  9a7b13193908_add_refresh_token_to_users.py  ddd637a86fa9_init_sqlmodel_migrations.py
apps/api/app/: main.py
apps/api/app/api/: websocket.py
apps/api/app/api/auth/: api.py  serializer.py
apps/api/app/cli/: __init__.py  createsuperuser.py
apps/api/app/core/: celery.py  exceptions.py  security.py  settings.py  websocket.py
apps/api/app/models/: database.py  user.py
apps/api/app/modules/auth/: oauth_service.py  service.py
apps/api/app/tasks/: __init__.py  example.py
apps/platform/: .cta.json  index.html  moon.yml  package.json  pnpm-lock.yaml  vite.config.ts
apps/platform/src/: main.tsx  routeTree.gen.ts  styles.css
apps/platform/src/components/: mode-toggle.tsx  sidebar.tsx  theme-provider.tsx  toaster.tsx
apps/platform/src/lib/: api.ts
apps/platform/src/routes/: __root.tsx  _dashboardLayout.tsx  index.tsx  login.tsx  register.tsx
apps/platform/src/routes/_dashboardLayout/: dashboard.tsx
apps/platform/src/routes/auth/: callback.tsx
(+11 files in other folders)
