[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.17.2",
    "fastapi>=0.128.0",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.45",
    "uvicorn[standard]>=0.40.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.21",
    "email-validator>=2.3.0",
    "greenlet>=3.3.0",
    "asyncpg>=0.31.0",
    "psycopg2-binary>=2.9.11",
    "redis>=7.1.0",
    "celery>=5.6.2",
]

[dependency-groups]
dev = [
    "ty>=0.0.10",
]
