[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.17.2",
    "fastapi>=0.128.0",
    "pydantic-settings>=2.12.0",
    "uvicorn[standard]>=0.40.0",
    "bcrypt>=4.2.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.21",
    "email-validator>=2.3.0",
    "greenlet>=3.3.0",
    "asyncpg>=0.31.0",
    "psycopg2-binary>=2.9.11",
    "redis>=7.1.0",
    "celery>=5.6.2",
    "httpx>=0.28.1",
    "authlib>=1.4.0",
    "sqlmodel>=0.0.31",
]

[dependency-groups]
dev = [
    "ruff>=0.14.11",
    "ty>=0.0.10",
]

[tool.ty.src]
exclude = ["alembic/"]
